Refactor `InputParser` to use new `Operands` class for improved encapsulation of operand data.